Bug 370158 - Krunner on Wayland can only be opened on the first desktop
Summary: Krunner on Wayland can only be opened on the first desktop
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.8.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3038
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-05 19:31 UTC by Michael D
Modified: 2016-10-18 06:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2016-10-05 19:31:54 UTC
I have four virtual desktops configured over two rows. No matter which desktop I'm on, invoking krunner in Wayland causes focus to be moved to the first virtual desktop. This does not happen in X11.

I noticed that when opening the virtual desktops settings, it shows only one virtual desktop configured, even though my Desktop Grid shows 4 desktops and I can navigate around them. This also explains why the pager widget does not appear in the panel.


Reproducible: Always

Steps to Reproduce:
1. Start a wayland session and configure multiple virtual desktops (perhaps this needs to be done in an X session)
2. Move to any of the "non-primary" desktops.
3. Invoke krunner

Actual Results:  
The user is moved to the primary virtual desktop

Expected Results:  
The user stays on the virtual desktop they were on before invoking krunner

KDE Neon Developer Edition (git stable), Plasma 5.8 (NOT beta).
Comment 1 Michael D 2016-10-05 19:37:04 UTC
I just noticed this happens when opening any widget, including Application Launcher, Folder View (on panel), Clipboard, etc. So this must be a Virtual Desktops bug. Sorry for misreporting. Can this be recategorized as, I presume, a plasmashell bug? Or shall I just file a new report?
Comment 2 Roman Gilg 2016-10-09 15:28:51 UTC
It is maybe related to the fact, that the KCM doesn't pickup multiple screens at all. See here: https://bugs.kde.org/show_bug.cgi?id=370344

I'll move the report to KWin Wayland, so Martin can decide where it should belong.
Comment 3 Martin Flöser 2016-10-10 05:45:46 UTC
This is related to: https://todo.kde.org/?controller=task&action=show&task_id=1759
Comment 4 Martin Flöser 2016-10-10 05:46:55 UTC
A possibility for KRunner could be to set itself as a Panel. @Kai: I think on X11 krunner is a panel, right? If that's so we just need to do the integration and ensure that the panel can take input.
Comment 5 Martin Flöser 2016-10-12 14:47:59 UTC
addressed in https://phabricator.kde.org/D3038
Comment 6 Michael D 2016-10-12 20:20:24 UTC
That was fast! Much appreciated!
Comment 7 Martin Flöser 2016-10-18 06:17:23 UTC
Git commit 9abb810212889341ef1c8c00ab1c940d14846cd8 by Martin Gräßlin.
Committed on 18/10/2016 at 06:16.
Pushed by graesslin into branch 'master'.

[krunner] Make KRunner on Wayland a Panel

Summary:
Panel is the best matching type which gives us the required behavior
like being on all desktops.

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3038

M  +3    -0    krunner/view.cpp

http://commits.kde.org/plasma-workspace/9abb810212889341ef1c8c00ab1c940d14846cd8