[krunner] Make KRunner on Wayland a Panel

Summary:
Panel is the best matching type which gives us the required behavior
like being on all desktops.

BUG: 370158

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3038